<resources>
    <string name="app_name">Ma réu</string>
    <string name="tab_neighbour_title">Salles occupées</string>
    <string name="tab_favorites_title">Salles libres</string>
    <string name="activity_new_meeting">Nouvelle réunion</string>
    <string name="activity_update_meeting">Modification de la réunion</string>
    <string name="activity_detail_meeting">Votre réunion en détails</string>

    <string name="meeting_color">Couleur du meeting :</string>
    <string name="meeting_main_title">ROOM</string>
    <string name="meeting_second_title">Sujet de la réunion</string>
    <string name="meeting_date">Date de la réunion</string>
    <string name="choose_meeting_location">Choississez votre salle de réunion :</string>
    <string name="meeting_location">Meeting Room</string>
    <string name="meeting_room_name">Room name</string>
    <string name="add_member_title">E-mail des participants :</string>
    <string name="add_member">Ajoutez un participant (email)</string>
    <string name="participant_name">Nom du participant</string>
    <string name="meeting_description_title">Ordre du jour</string>
    <string name="meeting_description_text">Décrivez en quelques mots l\'ordre du jour</string>
    <string name="meeting_detail_update_button">+</string>
    <string name="meeting_id">Meeting ID</string>

    <string name="menu_filter_date">Filtrer par date</string>
    <string name="menu_filter_room">Filtrer par salle</string>
    <string name="menu_filter_reset">Voir toutes les réunions</string>

    <string name="empty_list">Aucune réunion planifiée ne correspond à votre sélection</string>
    <string name="add_meeting">Ajout d\'un meeting</string>

</resources>
