<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/item_list_avatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_list_subject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:textStyle="bold"
        tools:text="@string/meeting_second_title"
        app:layout_constraintStart_toEndOf="@+id/item_list_avatar"
        app:layout_constraintTop_toTopOf="@id/item_list_avatar" />

    <TextView
        android:id="@+id/item_list_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/item_list_subject"
        app:layout_constraintTop_toTopOf="@id/item_list_avatar"
        tools:text="@string/meeting_date" />

    <TextView
        android:id="@+id/item_list_room"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textStyle="bold"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintStart_toEndOf="@id/item_list_date"
        app:layout_constraintTop_toTopOf="@id/item_list_avatar"
        app:layout_constraintEnd_toStartOf="@id/item_list_delete_button"
        tools:text="@string/meeting_room_name" />

    <TextView
        android:id="@+id/item_list_participants"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@id/item_list_delete_button"
        app:layout_constraintStart_toEndOf="@id/item_list_avatar"
        app:layout_constraintTop_toBottomOf="@id/item_list_room"
        tools:text="@string/add_member_title" />


    <ImageButton
        android:id="@+id/item_list_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_delete_white_24dp" />

</android.support.constraint.ConstraintLayout>