<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EBEFF0"
    tools:context=".ui.AddMeetingActivity">
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_date_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_date_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/meeting_date"
                    android:inputType="textShortMessage" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_subject_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_subject_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/meeting_second_title"
                    android:inputType="textShortMessage" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/add_room_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="18sp"
                android:text="@string/choose_meeting_location"/>

            <LinearLayout
                android:id="@+id/radioGroup_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="18dp"
                android:layout_marginEnd="18dp"
                android:layout_gravity="center"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_room_name_layout">

                <RadioGroup
                    android:id="@+id/radioGroup_1_to_5"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/meeting_detail_location_room">

                    <RadioButton
                        android:id="@+id/radioButton_room1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Peach"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/radioButton_room2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mario" />

                    <RadioButton
                        android:id="@+id/radioButton_room3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Luigi" />

                    <RadioButton
                        android:id="@+id/radioButton_room4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Yoshi" />

                    <RadioButton
                        android:id="@+id/radioButton_room5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Toad" />
                </RadioGroup>

                <RadioGroup
                    android:id="@+id/radioGroup_6_to_10"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/meeting_detail_location_room">

                    <RadioButton
                        android:id="@+id/radioButton_room6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Toadette" />

                    <RadioButton
                        android:id="@+id/radioButton_room7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Bowser" />

                    <RadioButton
                        android:id="@+id/radioButton_room8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Koopa" />

                    <RadioButton
                        android:id="@+id/radioButton_room9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Wario" />

                    <RadioButton
                        android:id="@+id/radioButton_room10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Donkey Kong" />

                </RadioGroup>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_participants_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_participants_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/meeting_members"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/add_description_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/add_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="2"
                    android:minLines="2"
                    android:ems="10"
                    android:hint="@string/meeting_description_text"
                    android:inputType="textMultiLine" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_description_layout"
                app:layout_constraintBottom_toTopOf="@+id/create"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/add_meeting_color_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/meeting_color"/>

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="8dp"
                    android:src="@drawable/circle" />

            </LinearLayout>

            <android.support.design.button.MaterialButton
                android:id="@+id/create"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:layout_gravity="center"
                app:cornerRadius="12dp"
                android:layout_marginTop="8dp"
                android:text="Créer"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</ScrollView>